Completando unidad 5 y refactoring de unidad 1 | DB-Ética

--- a/4º Año/Bases de Datos/Unidad 6/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 6/1. Diseño Relacional.md
@@ -94,14 +94,15 @@ Dos conjuntos de dependencias son equivalentes si $F_1^+ = F_2^+ \Rightarrow F_1
 
 >[!tldr] Atributos Extraños
 >Un **atributo extraño** en una dependencia funcional es un atributo que aunque esté presente en el lado izquierdo o derecho de la dependencia, no es necesario para establecer la relación de dependencia. En otras palabras, el atributo puede ser eliminado sin afectar la validez de la dependencia funcional.
->- **Atributos extraños a Izquierda**: Dada una dependencia funcional $X \rightarrow Y$ en un conjunto de dependencias $F$. Un atributo $C$ es extraño en $X$ si $C \in X$ y aún puedes deducir $Y$ de $X$ sin $C$. Es decir, $(X -C) \rightarrow Y$. Formalmente se debe cumplir que $F \vdash F' = (F - \{X \rightarrow Y\}) \cup \{(X - C) \rightarrow Y\}$.
->- **Atributos Extraños a Derecha**: Un atributo $C$ es extraño en $Y$ si $C \in Y$ y eliminar $C$, la nueva dependencia $X \rightarrow (Y − C)$ todavía permite inferir $F$. Formalmente se debe cumplir que $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\} \vdash F$.
+>- **Atributos extraños a Izquierda**: Dada una dependencia funcional $X \rightarrow Y$ en un conjunto de dependencias $F$. Un atributo $C$ es extraño en $X$ si $C \in X$ y aún se puede deducir $Y$ de $X$ sin $C$. Es decir, $(X -C) \rightarrow Y$. Formalmente se debe cumplir que: 
+>$$F \vdash F' = (F - \{X \rightarrow Y\}) \cup \{(X - C) \rightarrow Y\}$$
+>- **Atributos Extraños a Derecha**: Un atributo $C$ es extraño en $Y$ si $C \in Y$ y eliminar $C$, la nueva dependencia $X \rightarrow (Y − C)$ todavía permite inferir $F$. Formalmente se debe cumplir que:
+>$$F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\} \vdash F$$
 >
 >En todos los casos mencionados, la inferencia de dependencias funcionales en dirección opuesta es directa, porque una dependencia funcional que impone condiciones más estrictas incluye naturalmente aquellas que son menos estrictas.
->
 >Se puede verificar si un atributo es extraño tanto por izquierda como por derecha de la siguiente manera:
 >
->- Para testear si el atributo $C \in X$ es extraño en $X$, primero se calcula $(\{\} - C)^+$ usando las dependencias del conjunto $F$, luego se chequea si esta clausura contiene a $Y$, si es así $C$ es extraño en $X$.
->- Para testear si el atributo $C \in Y$ es extraño en $Y$, primero se calcula la clausura $X^+$ usando solo las dependencias en $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\}$, luego se chequea si $X^+$ en $F'$ contiene a $C$, si es así, $C$ es extraño.
+>1. Para testear si el atributo $C \in X$ es extraño en $X$, primero se calcula $(X - C)^+$ usando las dependencias del conjunto $F$, luego se chequea si esta clausura contiene a $Y$, si es así $C$ es extraño en $X$.
+>2. Para testear si el atributo $C \in Y$ es extraño en $Y$, primero se calcula la clausura $X^+$ usando solo las dependencias en $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\}$, luego se chequea si $X^+$ en $F'$ contiene a $C$, si es así, $C$ es extraño.
 
 Una cobertura canónica para $F$ es un conjunto de dependencias $F_C$ tal que, $F \vdash F_C \land F_C \vdash F$. Además ninguna dependencia funcional en $F_C$ contiene atributos extraños  y cada lado izquierdo de las dependencias funcionales en $F_C$ es único.
