--- a/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
@@ -28,7 +28,7 @@ Un dominio es atómico si se considera que los elementos del dominio son unidade
 
 - Conjuntos: Teléfonos de un empleado, titulares de cuentas, cuentas de un cliente, etc.
 - Atributos compuestos.
-- Números de identificación de la forma: VNT011 que pueden ser descompuestos en dos partes, una numérica y otra alfanumérica.
+- Números de identificación de la forma VNT011 que pueden ser descompuestos en dos partes, una numérica y otra alfanumérica.
 
 Se dice que el esquema de una relación $R$ está en la primera forma normal si los dominios de todos los atributos de $R$ son atómicos.
 
@@ -80,7 +80,12 @@ Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está 
 >Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$ teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una super clave y $B$ forma parte de una clave candidata.
 >Aunque la relación cumple con la tercera forma normal, todavía puede haber alguna redundancia. Por ejemplo, el valor de $B$ puede determinarse tanto directamente a través de $C$ como combinando $A$ y $B$. Esto podría llevar a inconsistencias si no se manejan adecuadamente las actualizaciones. Para evitar esto se puede descomponer $R$ en $R_1 = (A, C)$ y $R_2 = (C, B)$ siguiendo la forma normal de Boyce-Codd, para verificar que la relación original $AB \rightarrow C$ se cumpla para esta descomposición necesitaremos realizar un `JOIN` entre ambos esquemas.
 
-La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos para chequear en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, en caso que se requiera ver este, se puede recurrir a las filminas.
+La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
+
+1. Encontrar todas las claves candidatas posibles de acuerdo al conjunto de dependencias funcionales $F$.
+2. Calcular la cobertura canónica $F_C$ para el conjunto de dependencias funcionales $F$, en caso de que esta no sea ya una cobertura canónica.
+3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(XY)$, es decir, se creara una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un conjunto no se deberá crear una nueva relación.
+4. Si alguna de las $R_i$ relaciones contiene al menos a una clave candidata el proceso se detiene y $R$ esta ya en tercera forma normal. En caso contrario se deberá crear una nueva relación $R_i$ que contenga a cualquiera de las claves candidatas.
 
 >[!tldr] Comparación entre Tercera Forma Normal y Forma Normal de Boyce-Codd
 >- Siempre es posible descomponer un esquema en sub-esquemas en tercera forma normal, logrando mantener el join sin perdidas y preservando dependencias.
@@ -131,9 +136,8 @@ La quinta forma normal implica situaciones en donde una relación de tres vias d
 Las metas del diseño para una base de datos relacionales son conseguir la forma normal de boyce-Codd, los joins sin perdidas y la preservación de dependencias.
 Si no se puede alcanzar eso, se debe elegir entre carecer de las preservación de dependencias y tener problemas de redundancias debido al uso de la tercera forma normal. SQL no provee una forma directa de especificar dependencias funcionales que no sean las super claves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
 
->[!tldr] Testeo de Dependencia funcionales entre Relaciones
->Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN`de las relaciones en la descomposición.
+>[!tldr] Testeo de Dependencia Funcionales entre Relaciones
+>Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN` de las relaciones en la descomposición.
 >La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
 
-Generalmente el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$.
-Este $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ es sub-esquemas.
+Generalmente el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$. Este $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ es sub-esquemas.
