--- a/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 1/1. Introduccion Conceptos.md
@@ -1,59 +1,31 @@
-**Relación entre Moral, Ética y Deontología.**
+Se introducirán los siguientes conceptos:
 
-Es lo bueno o malo de una acción.
+- **Moral**: La moral es el conjunto de costumbres y normas que se consideran buenas para dirigir o juzgar el comportamiento de las personas en una comunidad.​
+- **Etica**: Rama de la filosofía que estudia la conducta humana, ​​ lo correcto y lo incorrecto. Es la teoría o ciencia del comportamiento moral.
 
-**¿Qué son los Códigos Morales?**
-
-Son aquellos que permiten determinar que esta bien y que esta mal.
-
-**¿Desde donde se generan los Códigos Morales?**
-
-- Desde la Familia.
-- Desde la Escuela y las Universidades.
-- Desde la Religión.
-- Desde el Estado.
-
-Son las reglas o normas por las que se rige la conducta o el comportamiento de un ser humano en relación a la sociedad, a sí mismo o a todo lo que lo rodea. Otra perspectiva la define como el conocimiento de lo que el ser humano debe de hacer o evitar para conservar estabilidad social.
-
+En este contexto un código moral, son un conjunto de reglas o normas que suelen generarse en el ámbito familiar, escolar, religioso o estatal. Las cuales se utilizan para rigir la conducta o el comportamiento de un ser humano en relación a la sociedad, a sí mismo o a todo lo que lo rodea. Otra perspectiva la define como el conocimiento de lo que el ser humano debe de hacer o evitar para conservar estabilidad social.
 La ética es una rama de la filosofía que se ocupa del estudio racional de la moral, la virtud, el deber, la felicidad y el buen vivir. **Ética = Moral reflexionada o analizada.**
 
+>[!Note] El Proceso Justo
+>Un proceso justo es una característica relacionada con sociedades gobernadas por leyes y es a la vez un proceso en que las Leyes se conocen y entienden, además de poderse apelar a más alto nivel para que se apliquen correctamente.
+
 ### Deontología
-Se refiere a un conjunto ordenado de deberes y obligaciones morales que tienen los profesionales de una determinada materia. La deontología es conocida también bajo el nombre de "teoría del deber". Se ubica entre la Moral y el Derecho. El derecho es el cuerpo de regulaciones o leyes y sus principios de aplicación e interpretación en un determinado lugar geográfico.
 
-Las normas dictadas en el Código Deontológico son previamente pactadas y aprobadas de manera común y unánime por todos los miembros de la profesión para la que se elaboran, son por lo tanto pautas de conducta a seguir cuyo objetivo es realizar un determinado trabajo de forma correcta, adecuada y eficiente. La moral, la ética y la deontología tienen relación entre sí ya que cada concepto va ligado a lo que es el comportamiento humano.
+Se refiere a un conjunto ordenado de deberes y obligaciones morales que tienen los profesionales de una determinada materia. Se ubica entre la Moral y el Derecho. Recordemos que el derecho es el cuerpo de regulaciones o leyes y sus principios de aplicación e interpretación en un determinado lugar geográfico.
+Las normas dictadas en el ***código deontológico*** son previamente pactadas y aprobadas de manera común y unánime por todos los miembros de la profesión para la que se elaboran, son por lo tanto pautas de conducta a seguir cuyo objetivo es realizar un determinado trabajo de forma correcta, adecuada y eficiente. La moral, la ética y la deontología tienen relación entre sí ya que cada concepto va ligado a lo que es el comportamiento humano.
+La ética y la moral es importante en nuestra formación profesional porque va a mostrar nuestro comportamiento en el ámbito laboral. Al aplicar la ética y la moral en tu campo de trabajo se obtienen mejores resultados, aunado a esto puedes aplicar esos conocimientos para controlar las diferentes situaciones que pueden resultar difíciles.
+La falta de moral o ética en tu profesión trae consigo muchos problemas, entre ellos está la pérdida del respeto pues estas incitando a que te dejen de respetar, también está la pérdida de la confianza, la cual te quitará además prestigio y hará que tu trabajo sea degradado. La autoridad moral se conseguirá mediante su propia actitud y comportamiento de inspiración ética en el ejercicio de la profesión.
 
-**¿Por qué es importante la ética y la moral en nuestra formación profesional?**
-
-Porque va a mostrar nuestro comportamiento en el ámbito laboral. Al aplicar la ética y la moral en tu campo de trabajo se obtienen mejores resultados, aunado a esto puedes aplicar esos conocimientos para controlar las diferentes situaciones que pueden resultar difíciles.
-
-**¿Cómo me afecta profesionalmente no ser una persona moral o ética?**
-
-La falta de moral o ética en tu profesión trae consigo muchos problemas, entre ellos está la pérdida del respeto pues estas incitando a que te dejen de respetar, también está la pérdida de la confianza, la cual te quitará además prestigio y hará que tu trabajo sea degradado.
-
-**¿Cómo se logra la autoridad moral?**
-
-Se conseguirá mediante su propia actitud y comportamiento de inspiración ética en el ejercicio de la profesión.
-### La Ética en una Sociedad de Información
-
-La ética es asunto del humano que tiene libertad de elección.
-
-**¿Qué me ayuda para saber cual es la elección moral correcta?**
-
-**Responsabilidad:** Es un elemento clave en la acción ética. Significa que Usted acepta los posibles costos, deberes y obligaciones de sus decisiones.
-
-**Responsabilidad Formal**
-
-**Rendición de cuentas:** Es un mecanismo para evaluar las responsabilidades por decisiones tomadas y acciones realizadas.
-
-**Responsabilidad legal:** Característica de los Sistemas políticos que permite a los individuos resarcirse de los daños causados por otros individuos, sistemas u organizaciones.
-
-### El Proceso Justo
-
-Característica relacionada con sociedades gobernadas por Leyes y es a la vez un proceso en que las Leyes se conocen y entienden, además de poderse apelar a más alto nivel para que se apliquen correctamente.
+>[!tldr] La Ética en una Sociedad de Información
+>La ética es asunto del humano que tiene libertad de elección. Para saber cual es la elección moralmente correcta debemos tener en cuanta los siguientes aspectos:
+>
+>1. **Responsabilidad:** Es un elemento clave en la acción ética. Significa que usted acepta los posibles costos, deberes y obligaciones de sus decisiones.
+>2. **Rendición de cuentas:** Es un mecanismo para evaluar las responsabilidades por decisiones tomadas y acciones realizadas.
+>3. **Responsabilidad legal:** Característica de los sistemas políticos que permite a los individuos resarcirse de los daños causados por otros individuos, sistemas u organizaciones.
 
 ### Análisis Ético
 
-**¿Cómo debe analizar una situación que implique aspectos éticos?**
+Una situación que implica directa o indirectamente aspectos éticos debe analizarse de la siguiente manera:
 
 1. **Identifique y describa claramente los hechos.** Indague quien le hizo que a quien y donde, cuando y como en muchos casos le sorprenderá los errores que se comenten en los informes sobre la descripción de los hechos y por lo general basta con aclarar las cosas para definir la solución.
 2. **Defina el conflicto o dilema e identifique los valores de orden superior implicados.** Los aspectos éticos, sociales y políticos siempre tienen que ver con una escala de valores las partes implicadas reclaman algún tipo de valor en la disputa o dilema por ejemplo La Libertad, La Vida, La privacidad, La Protección de Información u otros.
@@ -61,110 +33,59 @@ Característica relacionada con sociedades gobernadas por Leyes y es a la vez un
 4. **Identifique las opciones razonables que pueda tomar.** Tal vez encuentras un solución que no satisfaga los intereses de los involucrados, pero quizás algunas sean mejor que otras, a veces llegar a una buena solución ética no siempre significa equilibrar las consecuencias para los interesados.
 5. **Identifique la posibles consecuencias de sus opciones.** Debemos preguntarnos ¿Que pasaría si siempre eligiera esta opción? cual seria las consecuencias de decidir esta opción.
 
-### Principios Éticos
+Una vez que haya terminado su análisis, se debe determinar que normas o principios éticos debe aplicar para tomar una decisión. Puede optar por alguna de las siguientes o una combinación entre estas:
 
-Una vez que haya terminado su análisis: **¿Qué normas o principios éticos debe aplicar para tomar una decisión?**
+- **Regla de Oro** “Trate a los demás como quisiera que lo traten a Usted”.
+- **Regla del cambio de Descartes** “Si una acción no es correcta para todos, no es correcta para nadie”.
+- **Principio Utilitarista** “Tome la acción que alcance los valores mejores o superiores”.
+- **Principio de la aversión al riesgo** “Tome la acción que menos daño produzca o que tenga el menor costo potencial”.
+- **Regla ética “Nada es gratis”** “Suponga que virtualmente todos los objetos tangibles e intangibles son propiedad de alguien más, a menos que haya una declaración específica que indica lo contrario”.
 
-**Regla de Oro** “Trate a los demás como quisiera que lo traten a Usted”.
-
-**Regla del cambio de Descartes** “Si una acción no es correcta para todos, no es correcta para nadie”.
-
-**Principio Utilitarista** “Tome la acción que alcance los valores mejores o superiores”.
-
-**Principio de la aversión al riesgo** “Tome la acción que menos daño produzca o que tenga el menor costo potencial”.
-
-**Regla ética “Nada es gratis”** “Suponga que virtualmente todos los objetos tangibles e intangibles son propiedad de alguien más, a menos que haya una declaración específica que indica lo contrario”.
-
-### Aspectos Éticos y Sociales de los Sistemas de Información
-
-**Comprensión de los aspectos éticos y sociales relacionados a Sistemas**
-
-La tecnología puede ser utilizada para alcanzar logros sociales, pero también pueden ser utilizados para cometer delitos o crímenes que tergiversan los valores sociales.
-
-Los Sistemas de Información dan lugar a nuevos aspectos éticos porque crean oportunidades para un cambio social intenso y amenazan las estructuras existentes de poder, dinero, derechos y obligaciones.
-
-Internet y el comercio electrónico para las empresas digitales facilitan más que nunca la recopilación, integración y distribución de la información.
-
-Se generan nuevas preocupaciones:
-- Protección de la privacidad personal
-- Protección de la propiedad intelectual
-- Registros falsificados
-- Desvío de dinero, etc.
-
-### Tendencias Tecnológicas Claves que propician el surgimiento de problemas éticos.
-
-- Poder computacional se duplica cada 18 meses: más organizaciones dependen de sistemas computarizados para operaciones críticas.
-- Rápida reducción de costos de almacenamiento de datos: las organizaciones pueden mantener fácilmente bases de datos detalladas de individuos.
-- Avances en el análisis de datos: Las compañías pueden analizar gran cantidad de datos de individuos para desarrollar perfiles sobre el comportamiento del individuo.
-- Avances en las Redes y el Internet: copiar archivos, acceder a datos personales de lugares remotos, es mucho más fácil.
+>[!tldr] Aspectos Éticos y Sociales de los Sistemas de Información
+>La tecnología puede ser utilizada para alcanzar logros sociales, pero también pueden ser utilizados para cometer delitos o crímenes que tergiversan los valores sociales. Los Sistemas de Información dan lugar a nuevos aspectos éticos porque crean oportunidades para un cambio social intenso y amenazan las estructuras existentes de poder, dinero, derechos y obligaciones.
+>Internet y el comercio electrónico para las empresas digitales facilitan más que nunca la recopilación, integración y distribución de la información, pero a su vez generan nuevas preocupaciones:
+>
+>- Protección de la privacidad personal.
+>- Protección de la propiedad intelectual.
+>- Registros falsificados.
+>- Desvío de dinero.
+>
+>Adicionalmente existen distintas tendencias tecnológicas que propician el surgimiento de problemas éticos:
+>- Poder computacional se duplica cada 18 meses: más organizaciones dependen de sistemas computarizados para operaciones críticas.
+>- Rápida reducción de costos de almacenamiento de datos: las organizaciones pueden mantener fácilmente bases de datos detalladas de individuos.
+>- Avances en el análisis de datos: Las compañías pueden analizar gran cantidad de datos de individuos para desarrollar perfiles sobre el comportamiento del individuo.
+>- Avances en las Redes y el Internet: copiar archivos, acceder a datos personales de lugares remotos, es mucho más fácil.
 
 ### Ética Informática
 
-**¿Qué es la Ética Profesional?**
-
 La ética profesional es el conjunto de normas de carácter ético aplicadas en el desarrollo de una actividad laboral. La ética profesional puede aparecer reflejada en códigos deontológicos o códigos profesionales a través de una serie de principios y valores contenidos en postulados en forma de decálogo o documentos de mayor extensión.
+En la actualidad las computadoras y la Internet se utilizan como medios de comunicación y muchas veces no son regulados, lo cual da paso a que se cometan actividades no éticas e ilegales que perjudiquen a la sociedad. Así como muchas otras profesiones, la Informática se ha visto en la necesidad de reflexionar sobre una ética particular. A esa ética se le conoce como ***Ética Informática***.
+Se puede entender a la ética informática desde dos puntos desde dos puntos de vista:
 
-En la actualidad las computadoras y la Internet se utilizan como medios de comunicación y muchas veces no son regulados, lo cual da paso a que se cometan actividades no éticas e ilegales que perjudiquen a la sociedad. Así como muchas otras profesiones, la Informática se ha visto en la necesidad de reflexionar sobre una ética particular. A esa ética se le conoce como: **"Ética Informática" (EI)**
+- Filosófico: Problemas éticos en los que están implicados de forma significativa ordenadores y redes de ordenadores.
+- Profesional: Ética profesional en la que los profesionales de la informática aplican códigos éticos (deontológicos) y de buenas prácticas.
 
-**¿Qué es la Ética Informática?**
-
-Se puede entender desde dos puntos de vista:
-- Filosófico: problemas éticos en los que están implicados de forma significativa ordenadores y redes de ordenadores.
-- Profesional: ética profesional en la que los profesionales de la informática aplican códigos éticos (deontológicos) y de buenas prácticas.
-
-**Origen de la Ética Informática**
-
-El origen de la ética informática esta dada por la introducción masiva de los ordenadores en muchos ámbitos de la vida social.
-
-- Norbert Wiener (creador del término cibernética) fue el primero en estudiar la ética informática entre 1948 y 1963. Durante años su trabajo fue ignorado.
-- en 1976 Walter Maner observó, desde la ética médica, cómo problemas éticos tradicionales se veían alterados con el uso de ordenadores.
-- Para W. Maner, el uso de ordenadores realmente generaba problemas éticos completamente nuevos que no hubieran existido si los ordenadores no se hubieran inventado.
-- Creó el término Computer Ethics para referirse al área de estudio que examina “los problemas éticos agravados, transformados o creados por la tecnología informática”.
-- Deborah Johnson colaboró con W. Maner en los años 70 y 80, y aunque no coincidía con sus ideas, dieron lugar a una discusión fructífera sobre la ética informática.
-- A diferencia de W. Maner, Deborah Johnson no pensaba que los ordenadores generaran nuevos problemas éticos, sino que planteaban problemas tradicionales de forma nueva y en otras áreas que no se habían aplicado antes.
-- En los años 80 y 90 el trabajo de Johnson se consideró una referencia para diversos problemas éticos:
-    - propiedad del software y propiedad intelectual,
-    - computación y privacidad,
-    - responsabilidad de los profesionales de la informática,
-    - acceso no autorizado a ordenadores,
-    - tecnología para personas discapacitadas,
-    - impacto de internet en la democracia, etc.
-- Moor fue más allá de considerar ejemplos de problemas éticos, como los anteriores.
-- Para Moor, la tecnología informática propone más problemas éticos que otras tecnologías debido a la naturaleza revolucionaria.
-    - Los ordenadores son “lógicamente maleables” pues pueden moldearse para realizar cualquier actividad que pueda caracterizarse en términos de entradas, salidas y operaciones lógicas.
-    - Las aplicaciones potenciales de la tecnología informática parecen ilimitadas.
-    - El ordenador es lo más próximo a la herramienta universal.
-- A principios de los 90, D. Gotterbarn enfocó la ética informática de forma diferente.
-- Debería considerarse como una ética profesional dedicada al desarrollo y avance de estándares de buenas prácticas y códigos de conducta de los profesionales.
-- Gotterbarn colaboró en la elaboración del código ético de la Association for Computing Machinery (ACM - Asociación de los Sistemas Informáticos) y en el código de ética de ingeniería del software para ACM e IEEE (Inst. de Ing. Eléctrica y Electrónica).
-
-ACM: Fue fundada en 1947 como la primera sociedad científica y educativa acerca de la Computación.
-
-### Los diez mandamientos de la ética informática.
-
-- No usarás una computadora para dañar a otros.
-- No interferirás con el trabajo ajeno.
-- No indagarás en los archivos ajenos.
-- No utilizarás una computadora para robar.
-- No utilizarás la informática para realizar fraudes.
-- No copiarás o utilizarás software que no hayas comprado.
-- No utilizarás los recursos informáticos ajenos sin la debida autorización.
-- No te apropiarás de los derechos intelectuales de otros.
-- Deberás evaluar las consecuencias sociales de cualquier código que desarrolles.
-- Siempre utilizarás las computadoras de manera de respetar los derechos de los demás.
+>[!tldr] Los Diez Mandamientos de la Ética Informática.
+>- No usarás una computadora para dañar a otros.
+>- No interferirás con el trabajo ajeno.
+>- No indagarás en los archivos ajenos.
+>- No utilizarás una computadora para robar.
+>- No utilizarás la informática para realizar fraudes.
+>- No copiarás o utilizarás software que no hayas comprado.
+>- No utilizarás los recursos informáticos ajenos sin la debida autorización.
+>- No te apropiarás de los derechos intelectuales de otros.
+>- Deberás evaluar las consecuencias sociales de cualquier código que desarrolles.
+>- Siempre utilizarás las computadoras de manera de respetar los derechos de los demás.
+>
+>Estos diez mandamiento son un resumen simplificado de lo que son los distintos códigos de conducta redactado a lo largo de los años por diferentes instituciones, en caso de que desee saber más de esto puede leer el breve [[2. Origenes de la Etica Informatica|repaso histórico]] sobre la ética informática.
 
 ### Ética en Internet
 
-**Nuevos problemas éticos**
+Al igual que sucedió con el avance de las tecnologías de la información en desarrollo de Internet generó nuevos problemas éticos:
 
-**Privacidad:** Éste ha sido, probablemente, el primer tópico que se planteó en relación con las nuevas tecnologías y aquel que ha recibido mayor atención por parte de la opinión pública.
-
-**Control y vigilancia en el lugar de trabajo:** Estrechamente vinculada con el problema de la privacidad, pero con elementos claramente diferenciados, es toda la problemática referida al control y vigilancia en el lugar de trabajo.
-
-**Propiedad:** La cuestión de los derechos de propiedad, en el contexto de las nuevas tecnologías de la información y comunicación, es probablemente una de las más controvertidas. La problemática se plantea tanto en relación con el software como con los datos y también con el tiempo de computación.
-
-**Seguridad:** Por supuesto que, al referirnos a la seguridad, se apunta a un género de seguridad lógica que aparece amenazada en una época caracterizada por los virus y los hackers. De la interacción de unos con otros se han generado situaciones que abarcan una gama de hechos que van de lo claramente delictivo a lo Moralmente cuestionable.
-
-**Acceso y poder:** La problemática del acceso a los sistemas informáticos se vincula con la cuestión del poder. Pero, la posibilidad de tener acceso a la información en sí misma está relacionada con la problemática de la propiedad arriba analizada.
-
-**Globalización y responsabilidad profesional:** La evolución que se ha operado en el campo de la Ética de la computación y la fusión de las tecnologías de la información con las de la comunicación, así como el creciente impacto de carácter global que estas tecnologías.
+- **Privacidad:** Éste ha sido, probablemente, el primer tópico que se planteó en relación con las nuevas tecnologías y aquel que ha recibido mayor atención por parte de la opinión pública.
+- **Control y vigilancia en el lugar de trabajo:** Estrechamente vinculada con el problema de la privacidad, pero con elementos claramente diferenciados, es toda la problemática referida al control y vigilancia en el lugar de trabajo.
+- **Propiedad:** La cuestión de los derechos de propiedad, en el contexto de las nuevas tecnologías de la información y comunicación, es probablemente una de las más controvertidas. La problemática se plantea tanto en relación con el software como con los datos y también con el tiempo de computación.
+- **Seguridad:** Por supuesto que, al referirnos a la seguridad, se apunta a un género de seguridad lógica que aparece amenazada en una época caracterizada por los virus y los hackers. De la interacción de unos con otros se han generado situaciones que abarcan una gama de hechos que van de lo claramente delictivo a lo Moralmente cuestionable.
+- **Acceso y poder:** La problemática del acceso a los sistemas informáticos se vincula con la cuestión del poder. Pero, la posibilidad de tener acceso a la información en sí misma está relacionada con la problemática de la propiedad arriba analizada.
+- **Globalización y responsabilidad profesional:** La evolución que se ha operado en el campo de la Ética de la computación y la fusión de las tecnologías de la información con las de la comunicación, así como el creciente impacto de carácter global que estas tecnologías.
