[Feature|Fix] add last unit 8.1 sist ii and fix in text logic

--- a/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias  Informaticas/Unidad 1/1. Teorias Formales.md
@@ -113,7 +113,7 @@ Para el último punto hay que aclarar una cosa, los esquemas mostrados como ejem
 
 Una regla de inferencia es una relación $R$ de $n$ formulas bien formadas $(F_1, \cdots ,F_{n-1}, Q)$ tal que dadas $F_1, \cdots ,F_{n-1}$ y $Q$ se pueda decidir efectivamente si $(F_1, \cdots ,F_{n-1}, Q)$ están en la relación $R$. Si $(F_1, \cdots ,F_{n-1}, Q)$ están en la relación $R$ entonces $Q$ se dice una consecuencia directa de $F_1, F_2, \cdots,F_{n-1}$ por $R$. Ejemplos:
 
-- $P + Q$ es una consecuencia directa de $P$ y $Q$. Para toda formulas bien formadas $P$ y $Q$ define la relación $(P, Q, P + Q)$.
+- $P + Q$ es una consecuencia directa de $P$ y $Q$. Para toda formula bien formadas $P$ y $Q$ define la relación $(P, Q, P + Q)$.
 - Dada la relación $(P, P*Q, Q)$ entonces se dice que $Q$ es una consecuencia directa de $P$ y $P*Q$ para toda formula bien formada $P$ y $Q$.
 
 Veamos algunos ejemplos de diferentes formas de describir reglas de inferencia, donde $P$ y $Q$ son meta-variables que representan formula bien formada. Si $Q$ es una consecuencia directa de $P$ y $P *Q$ entonces, para toda formula bien formada $P$ y $Q$, se puede escribir -> $P, P *Q \vdash Q$.
